# journal-git-store

./: .gitignore  .pre-commit-config.yaml  LICENSE  app.py  config.py  package-lock.json  package.json  pyproject.toml
core/: __init__.py  ai.py  decorators.py  model.py  router.py
data/: todo.json
scripts/: clean_data.sh
src/static/css/: dist.css
static/css/: dist.css  input.css
templates/: base.html  dashboard.html  goals.html  login.html  todo.html
templates/icons/: caret_right.html  next.html  tick.html  trash.html
templates/partials/: nav_bar.html  time_block.html  time_now.html  todo_item.html
templates/partials/todo/: form.html  item.html  progress_bar.html
tests/: test_decorator.py  test_models.py
