[project]
name = "git-todo-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=."
